--- a/trelofake.html
+++ b/trelofake.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quick Task</title>
+  <title>Clonello</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,8 @@
 <body>
   <div class="navbar">
     <span class="logo">
-      <a href="login.html"><img src="assets/images/icon.png" alt="icon" width="55" height="55"></a>
-      Quick Task
+      <a href="login.html"><img src="Clonello.png" alt="icon" width="55" height="55"></a>
+      Clonello
     </span>
 
     <div class="user">
