--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quick Task - Login</title>
+  <title>Clonello - Login</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,11 +11,11 @@
     <link rel="icon" href="assets/images/icon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #1a237e;">
     <div class="navbar">
       <span class="logo">
-        <a href="login.html"><img src="assets/images/icon.png" alt="icon" width="55" height="55"></a>
-        Quick Task
+        <a href="login.html"><img src="Clonello.png" alt="icon" width="55" height="55"></a>
+        Clonello
       </span>
     </div>
     <div class="login-box">
@@ -26,6 +26,5 @@
       <h3><strong><p class="pError" id="error"></p></strong></h3>
     </div>
 <script type="module" src="script.js"></script>
-
 </body>
 </html>
