--- a/Clonello.html
+++ b/Clonello.html
@@ -45,5 +45,9 @@
   </div>
 
   <script type="module" src="./script.js"></script>
+  <script type="module" src="./boards.js"></script>
+  <script type="module" src="./columns.js"></script>
+  <script type="module" src="./elements.js"></script>
+  <script type="module" src="./tasks.js"></script>
 </body>
 </html>
