--- a/login.html
+++ b/login.html
@@ -26,5 +26,6 @@
       <h3><strong><p class="pError" id="error"></p></strong></h3>
     </div>
 <script type="module" src="script.js"></script>
+<script type="module" src="login.js"></script>
 </body>
 </html>
